fix: dropping kotlin Result to simpler Pair based error handling
- prepare migration to another MVI framework

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ landscapist = "2.4.2"
 orbitMvi = "9.0.0"
 datastore = "1.1.1"
 room = "2.6.1"
+#arrow = "1.2.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -74,6 +75,9 @@ orbitMvi-core = { group = "org.orbit-mvi", name = "orbit-core", version.ref = "o
 orbitMvi-viewmodel = { group = "org.orbit-mvi", name = "orbit-viewmodel", version.ref = "orbitMvi" }
 orbitMvi-compose = { group = "org.orbit-mvi", name = "orbit-compose", version.ref = "orbitMvi" }
 orbitMvi-test = { group = "org.orbit-mvi", name = "orbit-test", version.ref = "orbitMvi" }
+# arrow functional paradigm
+#arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
+#arrow-fx-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
