--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
-  
+
   <uses-permission android:name="android.permission.INTERNET" />
 
   <application
@@ -14,15 +14,26 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.DicodingStory"
-    tools:targetApi="31">
+    android:localeConfig="@xml/locales_config"
+    tools:targetApi="tiramisu">
+
+    <service
+      android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+      android:enabled="false"
+      android:exported="false">
+      <meta-data
+        android:name="autoStoreLocales"
+        android:value="true" />
+    </service>
+
     <activity
       android:name=".MainActivity"
       android:exported="true"
       android:label="@string/app_name"
-      android:theme="@style/Theme.DicodingStory">
+      android:theme="@style/Theme.DicodingStory"
+      tools:ignore="RedundantLabel">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
